--- a/src/pages/sale-page.pug
+++ b/src/pages/sale-page.pug
@@ -24,5 +24,57 @@ block main
     +viewed()
 
 block modals
-  +modal("modal--feedback")(data-modal="feedback")
-    +modal-feedback()
+  -
+    const optionsItems1 = [
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+    ];
+
+    const optionsItems2 = [
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+      {
+        textItem: 'Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия',
+      },
+    ];
+
+  +modal("modal--sale-1")
+    +modal-sale(optionsItems1)
+
+  +modal("modal--sale-2")
+    +modal-sale(optionsItems2)
