--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,9 @@
 @import 'layout/wrapper.scss';
 @import 'layout/footer.scss';
 
+// MODALS
+@import 'blocks/modals/modal-sale.scss';
+
 // BLOCKS
 
 // common...
