--- a/src/scss/blocks/modals/modal-sale.scss
+++ b/src/scss/blocks/modals/modal-sale.scss
@@ -20,13 +20,16 @@
     }
   }
 
+
   &__list {
+    @include scrollbar;
     margin: 0;
     padding-left: 22px;
     padding-right: 20px;
     max-height: 260px;
     overflow-y: auto;
   }
+
 
   &__info-title {
     font-weight: 500;
