feat(header-category): создает блок в шапке

--- a/src/components/layout/header.pug
+++ b/src/components/layout/header.pug
@@ -64,7 +64,7 @@ mixin header(headerMods, currentUrl)
 
     +mobile-menu(optionsNav).header__menu
 
-    .wrapper
+    .wrapper.header__wrapper
       .header__inner
 
         .header__brand
@@ -115,3 +115,5 @@ mixin header(headerMods, currentUrl)
             span
             span
             span
+
+    +header-category().header__header-category
