--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -45,6 +45,7 @@
 @import 'blocks/common/video.scss';
 @import 'blocks/common/video-vlog.scss';
 @import 'blocks/common/header-bar.scss';
+@import 'blocks/common/header-category.scss';
 @import 'blocks/common/search-modal.scss';
 @import 'blocks/common/popup.scss';
 @import 'blocks/common/contact-form.scss';
