--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -21,6 +21,7 @@ include ./blocks/common/company-image
 include ./blocks/common/video
 include ./blocks/common/video-vlog
 include ./blocks/common/header-bar
+include ./blocks/common/header-category
 include ./blocks/common/search-modal
 include ./blocks/common/popup
 include ./blocks/common/contact-form
