--- a/src/scss/global/variables.scss
+++ b/src/scss/global/variables.scss
@@ -8,6 +8,7 @@ $secondary: #909090;
 $bg-intro: #055b5c;
 $bg-image: #814793;
 $bg-disabled: #d9d9d9;
+$bg-hover: #fcfcfc;
 $accent-title: #fecb5e;
 $accent-bg-items: #ffdf85;
 $accent-bg-items-hover: #ffd151;
