--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -4,14 +4,35 @@
 
   z-index: 3;
   position: sticky;
+
   top: 0;
   left: 0;
   right: 0;
   background-color: $white;
-  border-bottom: 1px solid $border-fill;
 
   @include vp-desktop {
     top: -46px
+  }
+
+  &__header-category {
+    margin-top: 1px;
+    visibility: visible;
+    transform: translateY(0);
+    opacity: 1;
+    transition: visible 0.6s, transform 0.6s ease, opacity 0.6s ease;
+  }
+
+  &__wrapper {
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      right: 0;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $border-fill;
+    }
   }
 
 
@@ -444,6 +465,16 @@
 .header--scrolled {
   .header__inner {
     padding: 9px 0 13px;
+  }
+
+  .header__header-category {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    opacity: 0;
+    transform: translateY(-120%);
+    visibility: hidden;
   }
 }
 
