--- a/src/scss/blocks/common/header-category.scss
+++ b/src/scss/blocks/common/header-category.scss
@@ -1,23 +1,7 @@
 .header-category {
-  z-index: -1;
-  position: relative;
   max-width: 100vw;
-  padding-bottom: 22px;
-
-  @include vp-desktop {
-    padding-bottom: 30px;
-  }
-
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    right: 0;
-    left: 0;
-    width: 100%;
-    height: 1px;
-    background-color: $border-fill;
-  }
+  background-color: $white;
+  border-bottom: 1px solid $border-fill;
 
   &__inner {
     display: grid;
