--- a/src/scss/global/global.scss
+++ b/src/scss/global/global.scss
@@ -21,15 +21,14 @@ html {
 
 body {
   display: grid;
-  // grid-template-rows: 1fr min-content;
   grid-template-rows: min-content 1fr min-content;
-
-  // display: flex;
-  // flex-direction: column;
-
   min-height: 100vh;
   overflow-x: hidden;
   background-color: $white;
+}
+
+body main {
+  padding-top: 55px;
 }
 
 /*
