--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -460,7 +460,7 @@
     right: 0;
     margin-top: 1px;
     opacity: 1;
-    transition: all 0.3s ease-in-out;
+    transition: top 0.3s ease-in-out;
   }
 }
 
@@ -471,6 +471,7 @@
 
   .header__header-category {
     top: 0;
+    border: none;
   }
 }
 
