--- a/src/components/blocks/index/gifts-attachments.pug
+++ b/src/components/blocks/index/gifts-attachments.pug
@@ -54,7 +54,7 @@ mixin gifts-attachments()
           h2 Наш каталог
 
 
-        .gifts-attachments__category-inner.gifts-attachments__category-inner--gifts
+        .gifts-attachments__category-inner
           a.title.title--medium-uppercase.gifts-attachments__inner-title(href="#", aria-label="Переход в категорию подарков")
             h3 ПОДАРКИ
             +img("category-gifts", "png", 204, 145, "Иконка категории.")
@@ -66,7 +66,7 @@ mixin gifts-attachments()
                 +btn({href: option.linkItem}).btn--border-clear.gifts-attachments__btn(aria-label="Переход в раздел в категории подарков")
                   span!= option.nameItem
 
-        .gifts-attachments__category-inner.gifts-attachments__category-inner--attachments
+        .gifts-attachments__category-inner
           a.title.title--medium-uppercase.gifts-attachments__inner-title(href="#", aria-label="Переход в категорию вложения")
             h3 ВЛОЖЕНИЯ
             +img("category-attachments", "png", 204, 145, "Иконка категории.")
