--- a/src/scss/ui/news-cards.scss
+++ b/src/scss/ui/news-cards.scss
@@ -21,11 +21,11 @@
     margin-bottom: 10px;
 
     @include vp-tablet-landscape {
-      width: 76%;
+      //width: 76%;
     }
 
     @include vp-desktop {
-      width: 50%;
+      //width: 50%;
     }
   }
 
