--- a/src/components/blocks/sale-page/sale.pug
+++ b/src/components/blocks/sale-page/sale.pug
@@ -34,8 +34,17 @@ mixin sale()
                     | -
                     | #[time(datetime= option.dateAttributeFinish)!= option.dateFinish]
 
-                .text.text--super-big.sale__card-text
-                  p!= option.text
+                h3.text.text--super-big.sale__card-text!= option.text
 
-                +btn().btn--border-dashed-base.sale__card-btn(class= option.classBtn)
+                +btn().btn--border-dashed-base.sale__card-btn
                   span Подробнее
+
+                .sale__modal-content
+                  b Условия:
+                  ol
+                    li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
+                    li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
+                    li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
+                    li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
+                    li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
+
