--- a/src/components/blocks/sale-page/sale.pug
+++ b/src/components/blocks/sale-page/sale.pug
@@ -48,3 +48,8 @@ mixin sale()
                     li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
                     li Идейные соображения высшего порядка, а также постоянный количественный рост и сфера нашей активности играет важную роль в формировании систем массового участия
 
+          .sale__no-discount
+
+            +icon("icon-no-discount", 104, 104)
+
+            p На данный момент у нас нет активных акций или специальных предложений
