feat(vacancies-page): создаёт и подключает страницу

--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -58,6 +58,8 @@ include ./blocks/shipping-payment/payment
 
 include ./blocks/sale-page/sale
 
+include ./blocks/vacancies/vacancies
+
 //- UI
 include ./ui/icon
 include ./ui/img
