--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,6 +82,8 @@
 
 @import 'blocks/sale-page/sale.scss';
 
+@import 'blocks/vacancies/vacancies.scss';
+
 // PAGES
 @import 'pages/page-home.scss';
 @import 'pages/catalog.scss';
@@ -93,3 +95,4 @@
 @import 'pages/contacts-page.scss';
 @import 'pages/shipping-payment-page.scss';
 @import 'pages/sale-page.scss';
+@import 'pages/vacancies-page.scss';
