feat: добавляет в проект js файл для аккордеона

--- a/src/components/blocks/vacancies/vacancies.pug
+++ b/src/components/blocks/vacancies/vacancies.pug
@@ -7,6 +7,6 @@ mixin vacancies()
             .vacancies__content-title
               h2 Вакансии в Саратовской области
 
-          .vacancies__no-vacancies
+          .vacancies__no-vacancies(style="display: none;")
             +icon("icon-partner", 104, 104)
             p На данный момент у нас нет свободных вакансий или предложений
