--- a/src/scss/blocks/common/header-category.scss
+++ b/src/scss/blocks/common/header-category.scss
@@ -1,7 +1,9 @@
 .header-category {
   max-width: 100vw;
   background-color: $white;
+  border-top: 1px solid $border-fill;
   border-bottom: 1px solid $border-fill;
+
 
   &__inner {
     display: grid;
