--- a/src/scss/blocks/sale-page/sale.scss
+++ b/src/scss/blocks/sale-page/sale.scss
@@ -100,7 +100,7 @@
     font-size: 15px;
     line-height: 150%;
 
-    display: none;
+    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
