--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -31,7 +31,9 @@
   &__inner {
     z-index: 1;
     position: relative;
-    padding: 20px 0;
+    //padding: 20px 0;
+    padding: 9px 0 13px;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -49,7 +51,7 @@
     }
 
     @include vp-tablet {
-      padding: 25px 0;
+      //padding: 25px 0;
     }
   }
 
@@ -64,15 +66,7 @@
   }
 
   &__logo {
-    width: 53px;
-
-    @include vp-tablet {
-      width: 60px;
-    }
-
-    @include vp-tablet-landscape {
-      width: 64px;
-    }
+    width: 66px;
 
     img {
       width: 100%;
@@ -450,15 +444,16 @@
   }
 
   &__logo-link {
+    width: 66px;
     transition: $trans-default;
   }
 
   &__header-category {
+    z-index: -1;
     position: absolute;
     top: 100%;
     left: 0;
     right: 0;
-    margin-top: 1px;
     opacity: 1;
     transition: top 0.3s ease-in-out;
   }
@@ -466,7 +461,7 @@
 
 .header--scrolled {
   .header__inner {
-    padding: 9px 0 13px;
+    //padding: 9px 0 13px;
   }
 
   .header__header-category {
