--- a/src/scss/blocks/common/popup.scss
+++ b/src/scss/blocks/common/popup.scss
@@ -31,6 +31,30 @@
   }
 }
 
+.popup--form-left {
+
+}
+
+.popup--form-left.popup--opened {
+  justify-content: flex-start;
+
+  .popup__inner {
+    padding: 18px 30px;
+    max-width: 410px;
+    animation: slideLeft 0.3s ease-in-out forwards;
+  }
+
+  .popup__title {
+    font-size: 22px;
+    margin: 0;
+  }
+
+  .popup__close {
+    border: 1px solid rgba($primary, 0.4);
+    color: $primary;
+  }
+}
+
 .popup--centered {
   @include vp-tablet-landscape {
     align-items: center;
@@ -179,6 +203,15 @@
 @keyframes slideRight {
   0% {
     transform: translateX(100vw);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slideLeft{
+  0% {
+    transform: translateX(-100vw);
   }
   100% {
     transform: translateX(0);
