--- a/src/scss/blocks/common/search-modal.scss
+++ b/src/scss/blocks/common/search-modal.scss
@@ -198,6 +198,8 @@
     grid-row: 1 / -1;
     min-width: 135px;
     max-width: fit-content;
+    font-size: 16px;
+    line-height: 140%;
   }
 
   &__close {
