--- a/src/scss/blocks/news-article/article.scss
+++ b/src/scss/blocks/news-article/article.scss
@@ -92,7 +92,12 @@
       padding-right: 18.53%;
     }
 
-    h2 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
       font-weight: 500;
       font-size: 26px;
       line-height: 140%;
