--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -2,6 +2,8 @@
   max-width: 100vw;
   color: $base;
 
+  border-bottom: 1px solid $border-fill;
+
   z-index: 3;
   position: sticky;
 
@@ -66,7 +68,15 @@
   }
 
   &__logo {
-    width: 66px;
+    width: 53px;
+
+    @include vp-tablet {
+      width: 60px;
+    }
+
+    @include vp-tablet-landscape {
+      width: 64px;
+    }
 
     img {
       width: 100%;
@@ -173,22 +183,38 @@
   &--menu-opened &__search-form {
     z-index: 1;
     position: absolute;
-    padding-top: 31px;
+    padding-top: 21px;
     padding-right: 85px;
 
     @include vp-tablet {
-      padding-top: 41px;
+      padding-top: 26px;
       padding-right: 95px;
     }
 
     @include vp-tablet-landscape {
-      padding-top: 44px;
+      padding-top: 29px;
       padding-right: 95px;
     }
 
     @include vp-desktop {
       position: static;
     }
+    //padding-top: 31px;
+    //padding-right: 85px;
+    //
+    //@include vp-tablet {
+    //  padding-top: 41px;
+    //  padding-right: 95px;
+    //}
+    //
+    //@include vp-tablet-landscape {
+    //  padding-top: 44px;
+    //  padding-right: 95px;
+    //}
+    //
+    //@include vp-desktop {
+    //  position: static;
+    //}
   }
 
   &__search-form {
@@ -444,14 +470,22 @@
   }
 
   &__logo-link {
-    width: 66px;
+    width: 53px;
     transition: $trans-default;
+
+    @include vp-tablet {
+      width: 60px;
+    }
+
+    @include vp-tablet-landscape {
+      width: 64px;
+    }
   }
 
   &__header-category {
     z-index: -1;
     position: absolute;
-    top: 100%;
+    top: calc(100% + 1px);
     left: 0;
     right: 0;
     opacity: 1;
@@ -471,24 +505,24 @@
 }
 
 .header--menu-opened.header--scrolled {
-  .header__search-form {
-    padding-top: 21px;
-    padding-right: 85px;
-
-    @include vp-tablet {
-      padding-top: 26px;
-      padding-right: 95px;
-    }
-
-    @include vp-tablet-landscape {
-      padding-top: 29px;
-      padding-right: 95px;
-    }
-
-    @include vp-desktop {
-      position: static;
-    }
-  }
+  //.header__search-form {
+  //  padding-top: 21px;
+  //  padding-right: 85px;
+  //
+  //  @include vp-tablet {
+  //    padding-top: 26px;
+  //    padding-right: 95px;
+  //  }
+  //
+  //  @include vp-tablet-landscape {
+  //    padding-top: 29px;
+  //    padding-right: 95px;
+  //  }
+  //
+  //  @include vp-desktop {
+  //    position: static;
+  //  }
+  //}
 }
 
 .header__search-modal--opened .search-form__close-modal-button {
