--- a/src/components/blocks/product/composition.pug
+++ b/src/components/blocks/product/composition.pug
@@ -130,6 +130,8 @@ mixin composition()
 
                 each option in options
                   li.composition__section-card
+                    .composition__card-weight
+                      i 12 гр.
 
                     .composition__card-info
                       i!= option.textInfo
