--- a/src/scss/blocks/product/composition.scss
+++ b/src/scss/blocks/product/composition.scss
@@ -145,7 +145,7 @@
     box-sizing: border-box;
     border: 1px solid $border-fill;
     border-radius: 8px;
-    padding: 13px 18px 25px;
+    padding: 45px 18px 25px;
   }
 
   &__card-image {
@@ -169,10 +169,10 @@
   }
 
   &__card-title {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
+    //display: -webkit-box;
+    //-webkit-box-orient: vertical;
+    //-webkit-line-clamp: 2;
+    //overflow: hidden;
   }
 
   &__card-info {
