--- a/src/scss/layout/header.scss
+++ b/src/scss/layout/header.scss
@@ -47,7 +47,7 @@
       position: absolute;
       top: -48px;
       right: 0;
-      bottom: 0;
+      bottom: 2px;
       left: 0;
       background-color: #fff;
     }
