--- a/src/scss/blocks/common/company-image.scss
+++ b/src/scss/blocks/common/company-image.scss
@@ -87,6 +87,7 @@
 
   &__address {
     display: flex;
+    align-items: center;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
