--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 @import 'ui/navigation.scss';
 @import 'ui/search-form.scss';
 @import 'ui/input.scss';
+@import 'ui/accordion-item.scss';
 
 // LAYOUT
 @import 'layout/header.scss';
