--- a/src/scss/ui/accordion-item.scss
+++ b/src/scss/ui/accordion-item.scss
@@ -30,23 +30,6 @@
     color: rgba($base, 0.7);
     font-size: 15px;
     line-height: 140%;
-
-    dl {
-      margin: 0;
-    }
-
-    dt {
-      font-weight: 500;
-      color: $base;
-    }
-
-    dd {
-      margin-left: 0;
-    }
-
-    .link {
-      color: rgba($base, 0.7)
-    }
   }
 
   &__content {
@@ -61,14 +44,46 @@
     }
   }
 
+  // dl
   &__specification {
     display: flex;
     flex-direction: column;
+    margin: 0;
     gap: 30px;
 
     @include vp-tablet-landscape {
       gap: 24px;
     }
+  }
+
+  // dt
+  &__term {
+    font-weight: 500;
+    color: $base;
+    margin-bottom: 12px;
+
+    @include vp-tablet-landscape {
+      width: 24%;
+      margin-bottom: 0;
+    }
+  }
+
+  // dd
+  &__definition {
+    margin-left: 0;
+
+    @include vp-tablet {
+      width: 80%;
+    }
+
+    @include vp-tablet-landscape {
+      width: 58%;
+    }
+  }
+
+  // link
+  &__definition-callback {
+    color: rgba($base, 0.7)
   }
 
   &__specification-set {
@@ -80,26 +95,6 @@
       justify-content: space-between;
       column-gap: 20px;
     }
-
-    dt {
-      margin-bottom: 12px;
-
-      @include vp-tablet-landscape {
-        width: 24%;
-        margin-bottom: 0;
-      }
-    }
-
-    dd {
-      @include vp-tablet {
-        width: 80%;
-      }
-
-      @include vp-tablet-landscape {
-        width: 58%;
-      }
-    }
-
   }
 
   &__button-text {
@@ -111,6 +106,47 @@
       flex-direction: row;
       justify-content: space-between;
       column-gap: 20px;
+    }
+  }
+
+  // h3
+  &__title {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 140%;
+    color: $base;
+    margin: 0;
+    margin-bottom: 8px;
+
+    @include vp-tablet {
+      font-size: 16px;
+      width: 50%;
+      margin-bottom: 0;
+    }
+
+    @include vp-tablet-landscape {
+      width: 40%;
+    }
+  }
+
+  // p
+  &__details {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    margin: 0;
+
+    @include vp-tablet {
+      width: 50%;
+      column-gap: 60px;
+    }
+
+    @include vp-tablet-landscape {
+      width: 60%;
+    }
+
+    @include vp-desktop {
+      column-gap: 135px;
     }
   }
 
@@ -144,45 +180,6 @@
       padding-left: 28px;
     }
 
-    h3 {
-      font-weight: 500;
-      font-size: 15px;
-      line-height: 140%;
-      color: $base;
-      margin: 0;
-      margin-bottom: 8px;
-
-      @include vp-tablet {
-        font-size: 16px;
-        width: 50%;
-        margin-bottom: 0;
-      }
-
-      @include vp-tablet-landscape {
-        width: 40%;
-      }
-    }
-
-    P {
-      display: flex;
-      flex-wrap: wrap;
-      column-gap: 30px;
-      margin: 0;
-
-      @include vp-tablet {
-        width: 50%;
-        column-gap: 60px;
-      }
-
-      @include vp-tablet-landscape {
-        width: 60%;
-      }
-
-      @include vp-desktop {
-        column-gap: 135px;
-      }
-    }
-
     svg {
       transition: $trans-default;
       transform: rotate(-90deg);
@@ -192,9 +189,9 @@
       .accordion-item__button-icon {
         background-color: $primary;
 
-          svg {
-            color: $white;
-          }
+        svg {
+          color: $white;
+        }
       }
     }
   }
