--- a/src/components/components.pug
+++ b/src/components/components.pug
@@ -59,6 +59,7 @@ include ./blocks/shipping-payment/payment
 include ./blocks/sale-page/sale
 
 include ./blocks/vacancies/vacancies
+include ./blocks/vacancies/accordion-item
 
 //- UI
 include ./ui/icon
