--- a/src/scss/ui/input.scss
+++ b/src/scss/ui/input.scss
@@ -12,6 +12,14 @@ textarea,
   width: 100%;
 }
 
+.input {
+  @include vp-desktop {
+    &--radius-right-desktop {
+      border-radius: 0 6px 6px 0;
+    }
+  }
+}
+
 textarea.input,
 .form-row textarea {
   resize: none;
